--- a/coding-events/src/main/resources/templates/events/index.html
+++ b/coding-events/src/main/resources/templates/events/index.html
@@ -2,12 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head>
     <meta charset="UTF-8"/>
-    <title></title>
+    <title>All Events</title>
 </head>
 <body>
+
+<h1>All Events</h1>
     <ul>
         <th:block th:each="event : ${events}">
-            <li th:text:="${event}"></li>
+            <li th:text="${event}"></li>
         </th:block>
     </ul>
 </body>
