Added bootstrap styling

--- a/coding-events/src/main/resources/templates/events/index.html
+++ b/coding-events/src/main/resources/templates/events/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<body>
 
-<h1>All Events</h1>
+<body class="container">
 
-<nav th:replace="fragments :: navigation"></nav>
+<header th:replace="fragments :: header"></header>
 
-<p th:unless="${events} and ${events.size()}">No events!</p>
 
-    <ul>
-        <th:block th:each="event : ${events}">
-            <li th:text="${event}"></li>
-        </th:block>
-    </ul>
+
+
+    <table class="table table-striped">
+        <head>
+            <tr>
+                <th>Name</th>
+            </tr>
+        </head>
+        <tr th:each="event : ${events}">
+            <td th:text="${event}"></td>
+        </tr>
+    </table>
 </body>
 </html>
