--- a/coding-events/src/main/resources/templates/events/create.html
+++ b/coding-events/src/main/resources/templates/events/create.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-
 <body class="container">
 
 <header th:replace="fragments :: header"></header>
@@ -9,7 +8,13 @@
 <form method="post">
     <div class="form-group">
         <label>Name
-            <input type="text" name="eventName" class="form-control">
+            <input type="text" name="name" class="form-control">
+<!--                                        "name" has to match the field names of the event object in Event.java-->
+        </label>
+    </div>
+    <div class="form-group">
+        <label>Description
+            <input type="text" name="description" class="form-control">
         </label>
     </div>
     <div class="form-group">
