--- a/coding-events/src/main/resources/templates/events/index.html
+++ b/coding-events/src/main/resources/templates/events/index.html
@@ -7,8 +7,6 @@
 <header th:replace="fragments :: header"></header>
 
 
-
-
     <table class="table table-striped">
         <head>
             <tr>
@@ -17,11 +15,19 @@
                 <th>Description</th>
             </tr>
         </head>
+
         <tr th:each="event : ${events}">
             <td th:text="${event.id}"></td>
             <td th:text="${event.name}"></td>
             <td th:text="${event.description}"></td>
+            <td>
+                <a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a>
+            </td>
         </tr>
+
+
+
+
     </table>
 </body>
 </html>
