--- a/coding-events/src/main/resources/templates/events/index.html
+++ b/coding-events/src/main/resources/templates/events/index.html
@@ -8,26 +8,23 @@
 
 
     <table class="table table-striped">
-        <head>
+        <thead>
             <tr>
                 <th>ID</th>
                 <th>Name</th>
                 <th>Description</th>
+                <th>Contact Email</th>
+                <th>Type</th>
             </tr>
-        </head>
+        </thead>
 
         <tr th:each="event : ${events}">
             <td th:text="${event.id}"></td>
             <td th:text="${event.name}"></td>
             <td th:text="${event.description}"></td>
-            <td>
-                <a th:href="@{/events/edit/{id}(id=${event.id})}">Edit</a>
-            </td>
+            <td th:text="${event.contactEmail}"></td>
+            <td th:text="${event.type.displayName}"></td>
         </tr>
-
-
-
-
     </table>
 </body>
 </html>
