--- a/coding-events/src/main/resources/templates/index.html
+++ b/coding-events/src/main/resources/templates/index.html
@@ -4,9 +4,10 @@
 
 <body class="container">
 
-<h1>All Events</h1>
+<h1>Coding Events</h1>
 
-<p th:unless="${events} and ${events.size()}">No events!</p>
+
+<header th:replace="fragments :: header"></header>
 
 </body>
 </html>
