--- a/coding-events/src/main/resources/templates/tags/index.html
+++ b/coding-events/src/main/resources/templates/tags/index.html
@@ -3,9 +3,19 @@
 <head th:replace="fragments :: head"></head>
 <body class="container">
 
-<h1>Coding Events</h1>
-
 <header th:replace="fragments :: header"></header>
+
+<table class="table table-striped">
+    <thead>
+    <tr>
+        <th>Tag Name</th>
+    </tr>
+    </thead>
+    <tr th:each="tag : ${tags}">
+        <td th:text="${tag.displayName}"></td>
+    </tr>
+
+</table>
 
 </body>
 </html>
