--- a/coding-events/src/main/resources/templates/events/create.html
+++ b/coding-events/src/main/resources/templates/events/create.html
@@ -29,8 +29,8 @@
             <select th:field="${event.eventCategory}">
                 <option th:each="eventCategory : ${categories}"
                         th:value="${eventCategory.id}"
-                        th:text="${eventCategory.name}">
-                </option>
+                        th:text="${eventCategory.name}"
+                ></option>
             </select>
             <p class="error" th:errors="${event.eventCategory}"></p>
         </label>
